--- a/CRUDBlazorApp/Server/CRUDBlazorApp.Server.csproj
+++ b/CRUDBlazorApp/Server/CRUDBlazorApp.Server.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -28,6 +28,12 @@
   <ItemGroup>
     <ProjectReference Include="..\Client\CRUDBlazorApp.Client.csproj" />
     <ProjectReference Include="..\Shared\CRUDBlazorApp.Shared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="blazor_wasm_cert.pfx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 
